--- a/Content/app.css
+++ b/Content/app.css
@@ -5,13 +5,15 @@
  * Description: CSS file to manage the style for the pages.
  */
 
-/* Importing font */
+/* Importing fonts */
 @import url('https://fonts.googleapis.com/css?family=Lato');
+@import url('https://fonts.googleapis.com/css?family=Days+One|Paytone+One');
 
 body {
-    background-color: #02a9f7;
+    background-color: #d4f0fc;
     font-family: 'Lato', sans-serif;
-    padding: 70px;
+    padding-top: 70px;
+    padding-bottom: 70px;
     font: 100%;
 }
 
@@ -75,8 +77,38 @@ footer p {
     display: none;
 } 
 
-/* CSS for About Me page */
-div.row > div > img {
+/**********************************************************/
+/** ABOUT ME CSS ********************************************/
+/**********************************************************/
+
+div.row > div > figure > img {
     border-radius: 100%;
-    width: 250px;
+    width: 230px;
+    border: 1px solid black;
+}
+
+#pageAbout {
+    font-size: 1.5em;
+    color: #02577a;
+    /*resolved the problem with the footer overlaping the content - need to dig more*/
+    margin-bottom: 70px;
+    /*text-align: justify;*/
+}
+
+div.personal-quote {
+    font-family: 'Days One', sans-serif;
+    /*font-family: 'Paytone One', sans-serif;*/
+    margin-top: 40px;
+}
+
+div.row > h1 {
+    padding-left: 15%;
+    font-weight: bold;
+    color: #01303f;
+    margin-top: 30px;
+    margin-bottom: 30px;
+}
+
+i.fa-chevron-right {
+    color: #d54a50;
 }
