finished projects with new and better layout, new projects.

--- a/Content/app.css
+++ b/Content/app.css
@@ -161,6 +161,8 @@ i.fa-chevron-right {
   left: 50%;
   transform: translate(-50%, -50%);
   -ms-transform: translate(-50%, -50%);
+  width: 100%;
+  text-align: center;
 }
 
 .text a {
