--- a/Assets/projects/project_9/css/style.css
+++ b/Assets/projects/project_9/css/style.css
@@ -113,3 +113,16 @@
     padding: 0;
     font-weight: normal;
 }
+
+/* Media Queries */
+@media (max-width: 768px) {
+    .navbar-nav {
+        padding: .5rem;
+        margin-top: 2rem;
+    }
+    .navbar-collapse {
+        position: relative;
+        z-index: 999;
+        background-color: #fcdb00;
+    }
+}
