--- a/Assets/projects/project_12/css/style.css
+++ b/Assets/projects/project_12/css/style.css
@@ -3,7 +3,9 @@
     Author: Daniel Costa Ramos
 */
 
-/* Body */
+/**********************************************/
+/******************** Body ********************/
+/**********************************************/
 body{
     background: #ccc;
     padding: 0;
@@ -12,15 +14,114 @@ body{
     font-family: 'Roboto', sans-serif;
 }
 
+/**********************************************/
+/*********** Common CSS Style *****************/
+/**********************************************/
+
+/**********************************************/
+/****************** Header ********************/
+/**********************************************/
 header {
     background-color: #e84a5f;
     color: #fecea8;
     text-align: center;
 }
 
+nav ul {
+    list-style-type: none;
+        display: flex;
+        margin: 0;
+        padding: 0;
+}
+
+nav li a {
+    display: block;
+    background-color: #2a363b;
+    text-decoration: none;
+    color: white;
+}
+
+nav li a:hover {
+    background-color: white;
+    color: #2a363b;
+}
+
+nav li a:selected {
+    background-color: white;
+    color: #2a363b;
+}
+
+nav ul li ul {
+    display: none;
+}
+
+nav ul li:hover ul {
+    display: block;
+}
+
+nav ul li:hover ul li {
+    margin: 0;
+}
+
+/**********************************************/
+/****************** Main **********************/
+/**********************************************/
+main {
+    background-color: #ff847c;
+    color: #2a363b;
+}
+
+main h2, main p {
+    padding: 20px;
+    text-align: justify;
+    line-height: 1.5;
+}
+
+section {
+    border-bottom: 2px solid #2a363b;
+}
+
+section:last-child {
+    border-bottom: none;
+}
+
+/* paragraph that contains the image and possible description of the book*/
+section p:first-of-type {
+    width: 80%;
+    margin: 0 auto;
+    display: flex;
+}
+
+/**********************************************/
+/***************** Footer *********************/
+/**********************************************/
+footer {
+    display: flex;
+    justify-content: space-between;
+    flex-direction: row-reverse;
+    background-color: #e84a5f;
+    color: #2a363b;
+}
+
+footer p {
+    padding: 0px 20px;
+}
+
+footer small {
+    font-size: 0.9em;
+}
+
+footer a {
+    color: white;
+}
+
+
+/**********************************************/
+/******** Media Query - desktop ***************/
+/**********************************************/
 @media only screen and (min-width: 961px) {
     /* Header */
-    header h1, header  p {
+    header h1 {
         margin: 0;
         padding: 15px;
     }
@@ -30,10 +131,6 @@ header {
     }
 
     nav ul {
-        list-style-type: none;
-        display: flex;
-        margin: 0;
-        padding: 0;
         justify-content: center;
     }
 
@@ -46,47 +143,18 @@ header {
     }
 
     nav li a {
-        display: block;
         padding: 1.25em;
-        background-color: #2a363b;
-        text-decoration: none;
-        color: white;
-    }
-
-    nav li a:hover {
-        background-color: white;
-        color: #2a363b;
-    }
-
-    nav li a:selected {
-        background-color: white;
-        color: #2a363b;
     }
 
     nav ul li ul {
-        display: none;
         position: absolute;
-    }
-
-    nav ul li:hover ul {
-        display: block;
-    }
-
-    nav ul li:hover ul li {
-        margin: 0;
     }
 
     /* Main */
     main {
-        background-color: #ff847c;
-        color: #2a363b;
         width: 100%;
         margin: 0;
         padding: 0;
-    }
-
-    main p {
-        text-align: justify;
     }
 
     main h2:first-child, main > p {
@@ -99,17 +167,12 @@ header {
     section {
         width: 75%;
         margin: 0 auto;
-        border-bottom: 2px solid #2a363b;
         padding-bottom: 20px;
         font-size: 1.3em;
     }
 
     section p {
         line-height: 1.5;
-    }
-
-    section:last-of-type {
-        border-bottom: none;
     }
 
     section h3 {
@@ -119,9 +182,6 @@ header {
 
     /* paragraph that contains the image and possible description of the book*/
     section p:first-of-type {
-        width: 80%;
-        margin: 0 auto;
-        display: flex;
         font-size: 1.1em;
         line-height: 1.3;
     }
@@ -131,25 +191,7 @@ header {
     }
 
     /* Footer */
-    footer {
-        display: flex;
-        justify-content: space-between;
-        flex-direction: row-reverse;
-        background-color: #e84a5f;
-        color: #2a363b;
-    }
-
-    footer p {
-        padding: 0px 20px;
-    }
-
-    footer small {
-        font-size: 0.9em;
-    }
-
-    footer a {
-        color: white;
-    }
+    
     footer p a {
         font-size: 0.6em;
         position: fixed;
@@ -161,7 +203,13 @@ header {
         text-transform: uppercase;
     }
 } /* Media query min width: 961px */
+/**********************************************/
+/***************** END ************************/
+/**********************************************/
 
+/**********************************************/
+/********* Media Query - tablet ***************/
+/**********************************************/
 @media only screen and (min-width: 481px) and (max-width: 960px) {
     body {
         display: flex;
@@ -175,68 +223,28 @@ header {
     }
 
     nav ul {
-        list-style-type: none;
-        display: flex;
-        margin: 0;
-        padding: 0;
         justify-content: center;
         flex-direction: column;
     }
 
     nav li a {
-        display: block;
         padding: 1.25em;
-        background-color: #2a363b;
-        text-decoration: none;
-        color: white;
         text-align: left;
 
     }
 
-    nav li a:hover {
-        background-color: white;
-        color: #2a363b;
-    }
-
-    nav li a:selected {
-        background-color: white;
-        color: #2a363b;
-    }
-
     nav ul li ul {
-        display: none;
         margin-left: 15px;
-    }
-
-    nav ul li:hover ul {
-        display: block;
-    }
-
-    nav ul li:hover ul li {
-        margin: 0;
     }
 
     /* Main */
     main {
         width: 70%;
         margin-left: 30%;
-        background-color: #ff847c;
-        color: #2a363b;
-    }
-
-    main h2, main p {
-        padding: 20px;
-        text-align: justify;
-        line-height: 1.5;
     }
 
     section {
-        border-bottom: 2px solid #2a363b;
         padding-bottom: 15px;
-    }
-
-    section:last-child {
-        border-bottom: none;
     }
 
     section h3 {
@@ -249,12 +257,6 @@ header {
         font-size: 1.2em;
     }
 
-    section p:first-of-type {
-        width: 80%;
-        margin: 0 auto;
-        display: flex;
-    }
-
     section img {
         padding-right: 25px;
     }
@@ -265,26 +267,19 @@ header {
         position: fixed;
         bottom: 0;
         left: 0;
-        display: flex;
-        justify-content: space-between;
-        flex-direction: row-reverse;
-        background-color: #e84a5f;
-    }
-
-    footer p {
-        padding: 0px 20px;
-    }
-
-    footer small {
-        font-size: 0.9em;
     }
 
     footer a {
-        color: white;
         font-size: 0.8em;
     }
 } /* Media query min width 481px and max width: 960px */
+/**********************************************/
+/***************** END ************************/
+/**********************************************/
 
+/**********************************************/
+/******* Media Query - smartphone *************/
+/**********************************************/
 @media only screen and (max-width: 480px) {
     /* Header */
     header {
@@ -300,11 +295,7 @@ header {
         padding: 0px 5px;
     }
 
-        nav ul {
-        list-style-type: none;
-        display: flex;
-        margin: 0;
-        padding: 0;
+    nav ul {
         justify-content: center;
     }
 
@@ -318,35 +309,15 @@ header {
     }
 
     nav li a {
-        display: block;
         padding: 1.0em;
-        background-color: #2a363b;
-        text-decoration: none;
-        color: white;
-    }
-
-    nav li a:hover {
-        background-color: white;
-        color: #2a363b;
-    }
-
-    nav li a:selected {
-        background-color: white;
-        color: #2a363b;
     }
 
     nav ul li ul {
-        display: none;
         position: absolute;
         width: 100%;
     }
 
-    nav ul li:hover ul {
-        display: block;
-    }
-
     nav ul li:hover ul li {
-        margin: 0;
         border: 1px solid white;
         font-size: 0.8em;
         text-align: left;
@@ -354,21 +325,9 @@ header {
 
     /* Main */
     main {
-        background-color: #ff847c;
-        color: #2a363b;
         width: 100%;
         margin: 0;
         padding: 0;
-    }
-
-    main h2, main p {
-        margin: 0px;
-        padding: 15px;
-        text-align: justify;
-    }
-
-    section {
-        border-bottom: 2px solid #2a363b;
     }
 
     section h3, h4 {
@@ -385,13 +344,9 @@ header {
 
     section:last-child {
         margin-bottom: 70px;
-        border-bottom: none;
     }
 
     section p:first-of-type {
-        width: 80%;
-        margin: 0 auto;
-        display: flex;
         flex-direction: column;
         font-size: 0.9em;
         line-height: 1.3;
@@ -402,7 +357,6 @@ header {
     }
 
     section img {
-        /*padding-right: 25px;*/
         padding-bottom: 10px;
     }
 
@@ -412,14 +366,6 @@ header {
         position: fixed;
         bottom: 0;
         left: 0;
-        display: flex;
-        justify-content: space-between;
-        flex-direction: row-reverse;
-        background-color: #e84a5f;
-    }
-
-    footer p {
-        padding: 0px 20px;
     }
 
     footer small {
@@ -427,7 +373,9 @@ header {
     }
 
     footer a {
-        color: white;
         font-size: 0.7em;
     }
 } /* Media query max width: 480px */
+/**********************************************/
+/***************** END ************************/
+/**********************************************/
